# mcp-servers

./: .gitignore  HANDS_ON_GUIDE.md  README.en.md  README.md  README_EN.md  generate-mcp-spec.py  mcp_list_info.json
.本项目已经正式迁移至 AtomGit 平台/: README.md
doc/: CVE高效处理平台设计文档.md  HANDS_ON_GUIDE.md  MCP-Server-RPM打包指南.md  mcp_suggest.md  python-sdk-zh.md
edge_computing_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
edge_computing_mcp/src/: requirements.txt  server.py
scripts/: generate-mcp-spec.py  generate_mcp_spec_gitcode.py  get_man.py  manual_mcp_generator.py  mcp-server-template.yaml  run_manual_chain.sh  run_specchain.sh  run_tests.sh  testsuite_mcp_generator.py
scripts/tests/: test_generate_mcp_spec.py  test_testsuite_mcp_generator.py
servers/: mcp-rpm.yaml
servers/anaconda_mcp/: README.md  README_EN.md  mcp_config.json
servers/api_document_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
servers/application_performance_monitor_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
servers/backup_manager_mcp/: README.md  mcp-rpm.yaml
servers/build_assistant_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
servers/cache_manager_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
servers/ccb_mcp/: README.md  mcp-rpm.yaml  mcp_config.json
servers/cmake_mcp/: mcp-rpm.yaml  mcp_config.json
servers/codeReview_mcp/: README.md  README_EN.md  codeReview_mcp.json
servers/code_review_assistant_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
servers/code_search_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
servers/compile_diagnostic_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
servers/config-migration_mcp/: mcp-rpm.yaml  mcp_config.json
servers/container_image_converter_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
servers/container_orchestrator_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
servers/cron_task_manager_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
servers/cross_distro_packaging_mcp/: mcp-rpm.yaml  mcp_config.json
servers/ctest_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
servers/cve_mcp/: mcp-rpm.yaml  mcp_config.json
servers/cve_mcp_kernel/: mcp_config.json
servers/cvekit_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
servers/cvekit_mcp/src/cve_service/: README.md  README_EN.md  app_client.py  app_client_flask.py  app_server.py  clean_branch.py  folder_diff.diff  mcp_settings.json  pyproject.toml
servers/debug_assistant_mcp/: README.md  mcp-rpm.yaml  mcp_config.json
servers/dep_to_rpm_mcp/: mcp-rpm.yaml  mcp_config.json
servers/dependency_analyzer_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
servers/devkit_mcp/: main.py  mcp_config.jsom  pyproject.toml
servers/devstation-vm/: README.md  mcp_config.json
servers/discount_mcp/: mcp-rpm.yaml  mcp_config.json
servers/disk_array_manager_mcp/: README.md  mcp-rpm.yaml  mcp_config.json
servers/disk_manager_mcp/: mcp-rpm.yaml  mcp_config.json
servers/docker_mcp/: mcp_config.json
servers/efibootmgr_mcp/: mcp-rpm.yaml  mcp_config.json
servers/ffmpeg_mcp/: mcp_config.json  mcp_rpm.yaml
servers/file_integrity_check_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
servers/filesystem_manager_mcp/: README.md  README_EN.md  mcp-rpm.yaml  mcp_config.json
servers/gcc_mcp/: mcp-rpm.yaml  (+1 more)
(+519 files in other folders)
