[project]
name = "cve-service"
version = "0.1.0"
description = "This is a CVE service designed for the end-to-end CVE handling process."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk==0.3.10",
    "aiohttp==3.9.5",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "anyio>=4.5,<5",
    "anywidget==0.9.18",
    "astor==0.8.1",
    "asttokens==3.0.0",
    "async-timeout==4.0.3",
    "attrs==25.4.0",
    "babel==2.17.0",
    "bbox-visualizer==0.2.2",
    "beautifulsoup4==4.14.2",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cryptography==46.0.3",
    "curl-cffi==0.13.0",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "exceptiongroup==1.2.1",
    "executing==2.2.1",
    "flask==3.1.2",
    "fonttools==4.60.1",
    "frozenlist==1.4.1",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "greenlet==3.0.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "ipdb==0.13.13",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.7",
    "jedi==0.19.2",
    "jiter==0.11.1",
    "joblib==1.5.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-bbox-widget==0.6.0",
    "jupyterlab-widgets==3.0.15",
    "kiwisolver==1.4.9",
    "langchain==0.3.1",
    "langchain-core==0.3.6",
    "langchain-openai==0.2.0",
    "langchain-text-splitters==0.3.0",
    "langsmith==0.1.125",
    "levenshtein==0.25.1",
    "markdown-it-py==3.0.0",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.2.1",
    "mcp==1.19.0",
    "mdurl==0.1.2",
    "multidict==6.0.5",
    "numpy==1.26.4",
    "openai==1.109.1",
    "opencv-python==4.8.0.76",
    "orjson==3.10.5",
    "packaging==24.1",
    "pandas==2.3.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==10.1.0",
    "prompt-toolkit==3.0.52",
    "psutil==5.9.5",
    "psygnal==0.15.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==2.23",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pydantic-settings==2.11.0",
    "pygithub==2.8.1",
    "pygments==2.18.0",
    "pyjwt==2.10.1",
    "pylabel==0.1.55",
    "pynacl==1.5.0",
    "pyparsing==3.1.2",
    "python-dateutil==2.8.2",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pytz==2020.1",
    "pyyaml==6.0.1",
    "rapidfuzz==3.9.3",
    "referencing==0.37.0",
    "regex==2025.10.23",
    "requests==2.32.5",
    "rich==13.7.1",
    "rpds-py==0.28.0",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqlalchemy==2.0.31",
    "sse-starlette==3.0.2",
    "stack-data==0.6.3",
    "starlette==0.48.0",
    "tabulate==0.9.0",
    "tenacity==8.4.1",
    "threadpoolctl==3.6.0",
    "tiktoken==0.7.0",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uv==0.9.5",
    "uvicorn==0.38.0",
    "wcwidth==0.2.14",
    "websockets==14.0",
    "widgetsnbextension==4.0.14",
    "yarl==1.9.4",
]
